<resources>
    <string name="app_name">GYM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="zero">0</string>
    <string name="title_activity_exe_update">exeUpdate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="first_name">First Name</string>
    <string name="add">add</string>
    <string name="personal_detail">Personal Details</string>
    <string name="training">Training</string>
    <string name="workouts">Workouts</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="add_workout_to_trainee">Add Workout To Trainee</string>
    <string name="phone_number">phone number</string>
    <string name="manage_trainers">Manage Trainers</string>
    <string name="manage_trainees">Manage Trainees</string>
    <string name="manage_managers">Manage Managers</string>
    <string name="manage_updates">Manage Updates</string>
    <string name="manager">Manager</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="welcome">Welcome</string>
    <string name="gym_ariel">Gym Ariel</string>
    <string name="login">Login</string>
    <string name="type_new_workout_name">Type New Workout Name</string>
    <string name="Title">Title</string>
    <string name="message">message</string>
    <string-array name="planets_array">
        <item>Gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="male">
        <item>Gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="female">
        <item>Gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>

</resources>