<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_trainers"
            android:icon="@drawable/ic_add_task"
            android:title="@string/manage_trainers" />

        <item
            android:id="@+id/nav_manage_trainees"
            android:icon="@drawable/ic_add_task"
            android:title="@string/manage_trainees" />

        <item
            android:id="@+id/nav_manage_managers"
            android:icon="@drawable/ic_add_task"
            android:title="@string/manage_managers" />

        <item
            android:id="@+id/nav_manage_updates"
            android:icon="@drawable/ic_message"
            android:title="@string/manage_updates" />

        <item
            android:id="@+id/nav_update_contact"
            android:icon="@drawable/ic_email"
            android:title="@string/contact_details" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icons8_logout_rounded_100"
            android:title="@string/logout" />
    </group>


</menu>
