<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_details"
            android:icon="@drawable/ic_person"
            android:title="@string/personal_detail" />

        <item
            android:id="@+id/nav_tra"
            android:icon="@drawable/ic_add_task"
            android:title="@string/training" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icons8_logout_rounded_100"
            android:title="@string/logout" />
    </group>


</menu>
