<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/manger1"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_details"
            android:icon="@drawable/ic_person"
            android:title="@string/personal_detail" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />

        <item
            android:id="@+id/nav_add_train"
            android:icon="@drawable/ic_playlist_add"
            android:title="@string/add_workout_to_trainee" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icons8_logout_rounded_100"
            android:title="@string/logout" />
    </group>


</menu>
